# tp-sistemas-operativos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  barrera.cpp  barrera.h  cmake_install.cmake  definiciones.h  equipo.cpp  equipo.h  gameMaster.cpp  gameMaster.h  main.cpp  test_tp_sistemas
casos_test/: 10000x10000_10_jugadores_gana_rojo.txt  10000x10000_11_jugadores_gana_rojo.txt  10000x10000_12_jugadores_gana_rojo.txt  10000x10000_13_jugadores_gana_rojo.txt  10000x10000_14_jugadores_gana_rojo.txt  10000x10000_15_jugadores_gana_rojo.txt  10000x10000_1_jugador_gana_rojo.txt  10000x10000_1jugador  10000x10000_2_jugadores_gana_rojo.txt  10000x10000_3_jugadores_gana_rojo  10000x10000_4_jugadores_gana_rojo.txt  10000x10000_5_jugadores_gana_rojo.txt  10000x10000_6_jugadores_gana_rojo.txt  10000x10000_7_jugadores_gana_rojo.txt  10000x10000_8_jugadores_gana_rojo.txt  10000x10000_9_jugadores_gana_rojo.txt  1000x1000_2jugadores  1000x1000_3jugadores  250x250_3_jugadores_gana_azul  250x250_3_jugadores_gana_rojo  5000x5000_3 jugadores_gana_rojo  5000x5000_3_jugadores_gana_azul  500x500_15_jugadores_gana_azul  500x500_3_jugadores_gana_rojo  750x750_10_jugadores_gana_rojo  750x750_3jugadores  750x750_5_jugadores_gana_azul  caso_azul_1  caso_azul_2  caso_comun_fila_jugadores  caso_rojo_1  caso_rojo_2  estrategia_nuestra.txt  resultados.txt  round_robin_vs_shortest_quantum_5.txt  secuencial_jugador_trabado.txt  shortest_chocan_jugadores.txt  shortest_sin_problema.txt  tablero_grande_fila_azul_mas_cerca  tablero_grande_gana_rojo
config/: config_parameters.csv
